--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,81 +1,153 @@
 html body {
   font-family: 'Ubuntu', sans-serif;
-  background: #01161E; }
-  html body #homepage .rectangles {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    pointer-events: none; }
-    html body #homepage .rectangles .rectangle {
-      position: absolute;
-      height: 75px;
-      width: 50px;
-      border-radius: 5px; }
-      html body #homepage .rectangles .rectangle:nth-child(1) {
-        top: 35%;
-        left: 65%;
-        width: 75px;
-        height: 50px; }
-      html body #homepage .rectangles .rectangle:nth-child(2) {
-        top: 50%;
-        left: 50%; }
-      html body #homepage .rectangles .rectangle:nth-child(3) {
-        top: 20%;
-        left: 10%; }
-      html body #homepage .rectangles .rectangle:nth-child(4) {
-        top: 10%;
-        left: 80%;
-        width: 85px;
-        height: 75px; }
-      html body #homepage .rectangles .rectangle:nth-child(5) {
-        top: 80%;
-        left: 20%;
-        width: 100px; }
-    html body #homepage .rectangles .empty {
-      background: none !important; }
-    html body #homepage .rectangles .empty.red {
-      border: 4px solid #F71735; }
-    html body #homepage .rectangles .empty.blue {
-      border: 4px solid #41EAD4; }
-    html body #homepage .rectangles .red {
-      background: #F71735; }
-    html body #homepage .rectangles .blue {
-      background: #41EAD4; }
-  html body #homepage #sidebar {
-    max-width: 800px; }
-    html body #homepage #sidebar ul {
-      list-style: none;
-      width: 100%;
-      text-transform: uppercase;
-      font-weight: bold; }
-      html body #homepage #sidebar ul a li {
-        float: left;
-        color: #FDFFFC;
-        width: 100px;
-        margin: 25px;
-        transition: border 0.5s;
-        text-align: center; }
-        html body #homepage #sidebar ul a li:after {
-          content: '';
-          display: block;
-          width: 0;
-          height: 4px;
-          background: #F71735;
-          transition: width .3s;
-          margin-top: 50px; }
-        html body #homepage #sidebar ul a li:hover:after {
-          width: 100%; }
-  html body #homepage .welcome-banner {
-    position: absolute;
-    top: 50%;
-    left: 80%;
-    transform: translate(-80%, -50%);
-    white-space: nowrap; }
-    html body #homepage .welcome-banner p {
-      font-size: 120px;
-      color: #FDFFFC;
-      font-weight: bolder; }
-      html body #homepage .welcome-banner p span {
-        color: #F71735; }
+  background: #01161E;
+}
 
+html body #homepage .rectangles {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  pointer-events: none;
+}
+
+html body #homepage .rectangles .rectangle {
+  position: absolute;
+  height: 75px;
+  width: 50px;
+  border-radius: 5px;
+}
+
+html body #homepage .rectangles .rectangle:nth-child(1) {
+  top: 35%;
+  left: 65%;
+  width: 75px;
+  height: 50px;
+}
+
+html body #homepage .rectangles .rectangle:nth-child(2) {
+  top: 50%;
+  left: 50%;
+}
+
+html body #homepage .rectangles .rectangle:nth-child(3) {
+  top: 20%;
+  left: 10%;
+}
+
+html body #homepage .rectangles .rectangle:nth-child(4) {
+  top: 10%;
+  left: 80%;
+  width: 85px;
+  height: 75px;
+}
+
+html body #homepage .rectangles .rectangle:nth-child(5) {
+  top: 80%;
+  left: 20%;
+  width: 100px;
+}
+
+html body #homepage .rectangles .empty {
+  background: none !important;
+}
+
+html body #homepage .rectangles .empty.red {
+  border: 4px solid #F71735;
+}
+
+html body #homepage .rectangles .empty.blue {
+  border: 4px solid #41EAD4;
+}
+
+html body #homepage .rectangles .red {
+  background: #F71735;
+}
+
+html body #homepage .rectangles .blue {
+  background: #41EAD4;
+}
+
+html body #homepage #sidebar {
+  max-width: 800px;
+}
+
+html body #homepage #sidebar ul {
+  list-style: none;
+  width: 100%;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+html body #homepage #sidebar ul a li {
+  float: left;
+  color: #FDFFFC;
+  width: 100px;
+  margin: 25px;
+  -webkit-transition: border 0.5s;
+  transition: border 0.5s;
+  text-align: center;
+}
+
+html body #homepage #sidebar ul a li:after {
+  content: '';
+  display: block;
+  width: 0;
+  height: 4px;
+  background: #F71735;
+  -webkit-transition: width .3s;
+  transition: width .3s;
+  margin-top: 50px;
+}
+
+html body #homepage #sidebar ul a li:hover:after {
+  width: 100%;
+}
+
+html body #homepage .landing-page {
+  width: 100%;
+  height: 100vh;
+}
+
+html body #homepage .landing-page .welcome-banner {
+  position: absolute;
+  top: 50%;
+  left: 80%;
+  -webkit-transform: translate(-80%, -50%);
+          transform: translate(-80%, -50%);
+  white-space: nowrap;
+}
+
+html body #homepage .landing-page .welcome-banner p {
+  font-size: 120px;
+  color: #FDFFFC;
+  font-weight: bolder;
+}
+
+html body #homepage .landing-page .welcome-banner p span {
+  color: #F71735;
+}
+
+html body #homepage .about-me {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 600px;
+}
+
+html body #homepage .about-me .mind-map {
+  -webkit-box-flex: 2;
+      -ms-flex-positive: 2;
+          flex-grow: 2;
+  -ms-flex: 1;
+      flex: 1;
+}
+
+html body #homepage .about-me p {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  -ms-flex-positive: 1;
+      flex-grow: 1;
+  margin: 0px 25px;
+}
 /*# sourceMappingURL=stylesheet.css.map */
