--- a/css/stylesheet.scss
+++ b/css/stylesheet.scss
@@ -113,20 +113,38 @@ html {
           }
         }
       }
-      
-      .welcome-banner {
-        position: absolute;
-        top: 50%;
-        left: 80%;
-        transform: translate(-80%, -50%);
-        white-space: nowrap;
-        p {
-          font-size: 120px;
-          color: $color4;
-          font-weight: bolder;
-          span {
-            color: $color2;
+      .landing-page {
+        width: 100%;
+        height: 100vh;
+        .welcome-banner {
+          position: absolute;
+          top: 50%;
+          left: 80%;
+          transform: translate(-80%, -50%);
+          white-space: nowrap;
+          p {
+            font-size: 120px;
+            color: $color4;
+            font-weight: bolder;
+            span {
+              color: $color2;
+            }
           }
+        }
+      }
+
+      .about-me {
+        display: flex;
+        height: 600px;
+        
+        .mind-map {
+          flex-grow: 2;
+          flex: 1;  
+        }
+        p {
+          flex: 1;
+          flex-grow: 1;
+          margin: 0px 25px;
         }
       }
     }
