--- a/css/stylesheet.scss
+++ b/css/stylesheet.scss
@@ -5,11 +5,19 @@ $color4: #FDFFFC;
 
 
 
+@mixin transform($top, $left) {
+  position: absolute;
+  top: $top;
+  left: $left;
+  transform: translate(-$left, -$top);
+}
+
 
 html {
   body {
     font-family: 'Ubuntu', sans-serif;
     background: $color1;
+    color: white;
     #homepage {
       
       .rectangles {
@@ -140,11 +148,99 @@ html {
         .mind-map {
           flex-grow: 2;
           flex: 1;  
+          position: relative;
+          
+
+          span {
+
+            &:nth-child(1) {
+              @include transform(30%, 60%);
+            }
+
+            &:nth-child(2) {
+              @include transform(60%, 40%);
+            }
+
+            &:nth-child(3) {
+              @include transform(70%, 20%);
+            }
+
+            &:nth-child(4) {
+              @include transform(50%, 60%);
+            }
+
+            &:nth-child(5) {
+              @include transform(65%, 72%);
+            }
+
+            &:nth-child(6) {
+              @include transform(30%, 80%);
+            }
+
+            &:nth-child(7) {
+              @include transform(30%, 30%);
+            }
+
+            &:nth-child(8) {
+              @include transform(36%, 26%);
+            }
+
+            &:nth-child(9) {
+              @include transform(70%, 45%);
+            }
+
+            &:nth-child(10) {
+              @include transform(32%, 44%);
+            }
+
+            &:nth-child(11) {
+              @include transform(38%, 75%);
+            }
+
+            &:nth-child(12) {
+              @include transform(50%, 28%);
+            }
+
+            &:nth-child(13) {
+              @include transform(44%, 42%);
+            }
+
+            &:nth-child(14) {
+              @include transform(40%, 60%);
+            }
+
+
+            &:nth-child(odd) {
+              color: $color3;
+            }
+            &:nth-child(even) {
+              color: $color2;
+            }
+          }
+          
+          .large {
+            font-size: 2em;
+          }
+
+          .medium {
+            font-size: 2em;
+          }
+
+          .small {
+            font-size: 2em;
+          }
+
+          .xSmall {
+            font-size: 2em;
+          }
+
         }
+ 
         p {
           flex: 1;
           flex-grow: 1;
-          margin: 0px 25px;
+          margin: 0px 150px;
+          align-self: center;
         }
       }
     }
