Started my projects image grid

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -133,6 +133,7 @@ html body #homepage .about-me {
   display: -ms-flexbox;
   display: flex;
   height: 600px;
+  margin: 0 75px;
 }
 
 html body #homepage .about-me .mind-map {
@@ -141,143 +142,91 @@ html body #homepage .about-me .mind-map {
           flex-grow: 2;
   -ms-flex: 1;
       flex: 1;
-  position: relative;
-}
+  background: url("../img/Mindmap.png") no-repeat;
+  background-size: 100%;
+  background-position: center;
+  /*span {
 
-html body #homepage .about-me .mind-map span:nth-child(1) {
-  position: absolute;
-  top: 30%;
-  left: 60%;
-  -webkit-transform: translate(-60%, -30%);
-          transform: translate(-60%, -30%);
-}
+            &:nth-child(1) {
+              @include transform(30%, 60%);
+            }
 
-html body #homepage .about-me .mind-map span:nth-child(2) {
-  position: absolute;
-  top: 60%;
-  left: 40%;
-  -webkit-transform: translate(-40%, -60%);
-          transform: translate(-40%, -60%);
-}
+            &:nth-child(2) {
+              @include transform(60%, 40%);
+            }
 
-html body #homepage .about-me .mind-map span:nth-child(3) {
-  position: absolute;
-  top: 70%;
-  left: 20%;
-  -webkit-transform: translate(-20%, -70%);
-          transform: translate(-20%, -70%);
-}
+            &:nth-child(3) {
+              @include transform(70%, 20%);
+            }
 
-html body #homepage .about-me .mind-map span:nth-child(4) {
-  position: absolute;
-  top: 50%;
-  left: 60%;
-  -webkit-transform: translate(-60%, -50%);
-          transform: translate(-60%, -50%);
-}
+            &:nth-child(4) {
+              @include transform(50%, 60%);
+            }
 
-html body #homepage .about-me .mind-map span:nth-child(5) {
-  position: absolute;
-  top: 65%;
-  left: 72%;
-  -webkit-transform: translate(-72%, -65%);
-          transform: translate(-72%, -65%);
-}
+            &:nth-child(5) {
+              @include transform(65%, 72%);
+            }
 
-html body #homepage .about-me .mind-map span:nth-child(6) {
-  position: absolute;
-  top: 30%;
-  left: 80%;
-  -webkit-transform: translate(-80%, -30%);
-          transform: translate(-80%, -30%);
-}
+            &:nth-child(6) {
+              @include transform(30%, 80%);
+            }
 
-html body #homepage .about-me .mind-map span:nth-child(7) {
-  position: absolute;
-  top: 30%;
-  left: 30%;
-  -webkit-transform: translate(-30%, -30%);
-          transform: translate(-30%, -30%);
-}
+            &:nth-child(7) {
+              @include transform(30%, 30%);
+            }
 
-html body #homepage .about-me .mind-map span:nth-child(8) {
-  position: absolute;
-  top: 36%;
-  left: 26%;
-  -webkit-transform: translate(-26%, -36%);
-          transform: translate(-26%, -36%);
-}
+            &:nth-child(8) {
+              @include transform(36%, 26%);
+            }
 
-html body #homepage .about-me .mind-map span:nth-child(9) {
-  position: absolute;
-  top: 70%;
-  left: 45%;
-  -webkit-transform: translate(-45%, -70%);
-          transform: translate(-45%, -70%);
-}
+            &:nth-child(9) {
+              @include transform(70%, 45%);
+            }
 
-html body #homepage .about-me .mind-map span:nth-child(10) {
-  position: absolute;
-  top: 32%;
-  left: 44%;
-  -webkit-transform: translate(-44%, -32%);
-          transform: translate(-44%, -32%);
-}
+            &:nth-child(10) {
+              @include transform(32%, 44%);
+            }
 
-html body #homepage .about-me .mind-map span:nth-child(11) {
-  position: absolute;
-  top: 38%;
-  left: 75%;
-  -webkit-transform: translate(-75%, -38%);
-          transform: translate(-75%, -38%);
-}
+            &:nth-child(11) {
+              @include transform(38%, 75%);
+            }
 
-html body #homepage .about-me .mind-map span:nth-child(12) {
-  position: absolute;
-  top: 50%;
-  left: 28%;
-  -webkit-transform: translate(-28%, -50%);
-          transform: translate(-28%, -50%);
-}
+            &:nth-child(12) {
+              @include transform(50%, 28%);
+            }
 
-html body #homepage .about-me .mind-map span:nth-child(13) {
-  position: absolute;
-  top: 44%;
-  left: 42%;
-  -webkit-transform: translate(-42%, -44%);
-          transform: translate(-42%, -44%);
-}
+            &:nth-child(13) {
+              @include transform(44%, 42%);
+            }
 
-html body #homepage .about-me .mind-map span:nth-child(14) {
-  position: absolute;
-  top: 40%;
-  left: 60%;
-  -webkit-transform: translate(-60%, -40%);
-          transform: translate(-60%, -40%);
-}
+            &:nth-child(14) {
+              @include transform(40%, 60%);
+            }
 
-html body #homepage .about-me .mind-map span:nth-child(odd) {
-  color: #41EAD4;
-}
 
-html body #homepage .about-me .mind-map span:nth-child(even) {
-  color: #F71735;
-}
+            &:nth-child(odd) {
+              color: $color3;
+            }
+            &:nth-child(even) {
+              color: $color2;
+            }
+          }
+          
+          .large {
+            font-size: 2em;
+          }
 
-html body #homepage .about-me .mind-map .large {
-  font-size: 2em;
-}
+          .medium {
+            font-size: 2em;
+          }
 
-html body #homepage .about-me .mind-map .medium {
-  font-size: 2em;
-}
+          .small {
+            font-size: 2em;
+          }
 
-html body #homepage .about-me .mind-map .small {
-  font-size: 2em;
-}
-
-html body #homepage .about-me .mind-map .xSmall {
-  font-size: 2em;
+          .xSmall {
+            font-size: 2em;
+          }*/
 }
 
 html body #homepage .about-me p {
@@ -286,9 +235,48 @@ html body #homepage .about-me p {
           flex: 1;
   -ms-flex-positive: 1;
       flex-grow: 1;
-  margin: 0px 150px;
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
+}
+
+html body #homepage .projects {
+  margin: 50px 75px;
+}
+
+html body #homepage .projects p {
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 36px;
+  font-weight: bolder;
+  height: 50px;
+  position: relative;
+}
+
+html body #homepage .projects p:after {
+  content: '';
+  width: 150px;
+  border-bottom: 3px solid white;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+}
+
+html body #homepage .projects .tiles {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+html body #homepage .projects .tiles img {
+  height: 150px;
+  border: 1px solid #01161E;
 }
 /*# sourceMappingURL=stylesheet.css.map */
