--- a/css/stylesheet.scss
+++ b/css/stylesheet.scss
@@ -144,14 +144,16 @@ html {
       .about-me {
         display: flex;
         height: 600px;
-        
+        margin: 0 75px;
         .mind-map {
           flex-grow: 2;
           flex: 1;  
-          position: relative;
+          background: url("../img/Mindmap.png") no-repeat;
+          background-size: 100%;
+          background-position: center;
           
 
-          span {
+          /*span {
 
             &:nth-child(1) {
               @include transform(30%, 60%);
@@ -232,15 +234,52 @@ html {
 
           .xSmall {
             font-size: 2em;
-          }
+          }*/
 
         }
  
         p {
           flex: 1;
           flex-grow: 1;
-          margin: 0px 150px;
+          
           align-self: center;
+        }
+      }
+
+      .projects {
+        margin: 50px 75px;
+        p {
+          text-align: center;
+          text-transform: uppercase;
+          font-size: 36px;
+          font-weight: bolder;
+          height: 50px;
+          position: relative;
+
+          &:after {
+            content: '';
+            width: 150px;
+            border-bottom: 3px solid white;
+            position: absolute;
+            bottom: 0;
+            left: 50%;
+            transform: translateX(-50%);
+            
+          }
+        }
+
+
+        .tiles {
+          display: flex;
+          justify-content: center;
+          
+          flex-wrap: wrap;
+          img {
+        
+            height: 150px;
+            border: 1px solid $color1;
+  
+          }
         }
       }
     }
