--- a/css/stylesheet.scss
+++ b/css/stylesheet.scss
@@ -110,7 +110,7 @@ html {
                 height: 4px;
                 background: $color2;
                 transition: width .3s;
-                margin-top: 50px;
+                margin-top: 25px;
               }
 
               &:hover:after {
@@ -254,22 +254,34 @@ html {
           font-size: 36px;
           font-weight: bolder;
           height: 50px;
-          position: relative;
+          display: block;
 
-          &:after {
-            content: '';
-            width: 150px;
-            border-bottom: 3px solid white;
-            position: absolute;
-            bottom: 0;
-            left: 50%;
-            transform: translateX(-50%);
-            
+          span {
+            position: relative;
+            display: block;
+            margin-bottom: -10px;
+
+            &:after, &:before {
+              content: '';
+              width: 50px;
+              border-bottom: 3px solid white;
+              position: absolute;
+              bottom: 50%;
+              left: calc(50% - 75px);
+              transform: translateX(-50%); 
+              
+            }
+
+            &:after {
+              left: calc(50% + 75px);
+            }
           }
+          
         }
 
 
         .tiles {
+          margin-top: 100px;
           display: flex;
           justify-content: center;
           
